Fix image on course production mobile.

--- a/src/scss/layout/sections/_course-production.scss
+++ b/src/scss/layout/sections/_course-production.scss
@@ -16,9 +16,9 @@
         width: 100%;
         height: auto;
 
-        // &--desktop {
-        //     display: none;
-        // }
+        &--desktop {
+            display: none;
+        }
     }
 
     &__outer-text-container {
@@ -45,7 +45,7 @@
     }
 
     &__btn {
-        margin: 0 3.2rem;
+        // margin: 0 3.2rem;
 
         &--desktop {
             display: none!important;
