--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -514,6 +514,9 @@ body {
   width: 100%;
   height: auto;
 }
+.course-production__img--desktop {
+  display: none;
+}
 .course-production__outer-text-container {
   margin-top: 4rem;
   padding: 0 3.2rem;
@@ -531,9 +534,6 @@ body {
 }
 .course-production__text:last-of-type {
   margin-bottom: 4rem;
-}
-.course-production__btn {
-  margin: 0 3.2rem;
 }
 .course-production__btn--desktop {
   display: none !important;
